ueberarbeitet, aktualisiert und abgeschlossen

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>Grid Shop Project</title>
 </head>
 
-
-
 <body>
+    
+    <button onclick="goToTop()" id="backToTop" title="Go to top">Top</button>
 
     <header>
         <h1><a href="#">THE DESIGN SHOP</a></h1>
@@ -399,41 +399,43 @@
                 <figcaption class="p">Soma</figcaption>
             </figure>
         </section>
+
+
     </main>
 
     <footer>
 
         <article>
-            <h4>The Design Shop</h4>
-            <h5>Carefully curated online design store,
-                founded and designed by Ruby Bacanovic.</h5>
+            <h3>The Design Shop</h3>
+            <p>Carefully curated online design store,
+                founded and designed by Ruby Bacanovic.</p>
             <p class="trademark">© 2019 The Design Shop · The Design Blog</p>
         </article>
 
         <article>
-            <h4>Contact</h4>
-            <h5>Email us</h5>
-            <h5>Work with us</h5>
+            <h3>Contact</h3>
+            <p><a href="#">Email us</a></p>
+            <p><a href="#">Work with us</a></p>
         </article>
 
         <article>
-            <h4>Newsletter</h4>
-            <h5>Click here to subscribe</h5>
-            <h5>Don't worry. We hate spam too</h5>
+            <h3>Newsletter</h3>
+            <p><a href="#">Click here to subscribe</a></p>
+            <p>Don't worry. We hate spam too</p>
         </article>
 
         <article>
-            <h4>Find Us Here</h4>
-            <a href="https://www.facebook.de">Facebook</a>
-            <a href="https://www.instagram.de">Instagram</a>
-            <a href="https://www.twitter.de">Twitter</a>
+            <h3>Find Us Here</h3>
+            <a href="https://www.facebook.com">Facebook</a>
+            <a href="https://www.instagram.com">Instagram</a>
+            <a href="https://www.x.com">X</a>
         </article>
 
 
     </footer>
 
 
-
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html> 
