fixed: footer <article>

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button onclick="goToTop()" id="backToTop" title="Go to top">Top</button>
 
     <header>
-        <h1><a href="#">THE DESIGN SHOP</a></h1>
+        <h1><a href="#">THE DESIGN SHOP<br/><h6><em>by Akansel Cengiz</em></h6></a></h1>
         <nav>
             <ul>
                 <li><a href="#">Weekly Recommendations</a></li>
